--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -19,15 +19,24 @@ repositories {
 }
 
 dependencies {
+	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// spring web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// lombok
 	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	// mysql
+	runtimeOnly 'mysql:mysql-connector-java'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
